--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
+    "@types/formidable": "^2.0.6",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "cloudinary": "^1.37.0",
+    "formidable": "^2.1.1",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "slugify": "^1.6.6",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
