--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "classnames": "^2.3.2",
     "cloudinary": "^1.37.0",
     "formidable": "^2.1.1",
+    "joi": "^17.9.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
